# systemudev-usb-monitor

./: .gitignore  README.md  pyproject.toml
config/: config_example.toml
systemudev_usb_monitor/: cli.py  main.py
